# slung_pose_measurement

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/: placeholder.txt  real_2024_06_05_logger1.txt  real_2024_06_16_measurement_drone1.txt  sim_2024_06_03_measurement_drone1.txt  sim_2024_09_15_10_54_30_logger1.txt  sim_filter_2024_09_05_19_54_54_measurement_drone1.txt
include/slung_pose_measurement/: State.h  datatypes.h  frame_transforms.h  logger.h  slungPoseMeasurement.h  utils.h
launch/: logger.launch.py  visual_measurement.launch.py
src/: State.cpp  frame_transforms.cpp  logger.cpp  plot_ground_truth.py  plot_measurement.py  plot_measurement_old.py  slungPoseMeasurement.cpp  utils.cpp
tools/: copy_results_from_phys_system.sh  copy_rosbag.sh
